<resources>
    <string name="app_name">My List</string>
    <string name="btn_edit">수정</string>
    <string name="btn_del">삭제</string>
    <string name="btn_listen">듣기</string>
    <string name="btn_save">저장</string>
    <string name="btn_cancel">취소</string>
    <string name="sname">제목</string>
    <string name="swhen">날짜</string>
    <string name="swhere">장소</string>
    <string name="sdetail">내용</string>
    <string name="sname_hint">제목 입력</string>
    <string name="swhen_hint">날짜 선택</string>
    <string name="swhere_hint">장소 입력</string>
    <string name="sdetail_hint">내용 입력</string>
</resources>